--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ pandas==2.1.3
 numpy==1.26.2
 scikit-learn==1.3.2
 scipy==1.11.4
+imbalanced-learn==0.11.0
 openpyxl==3.1.2
 xlrd==2.0.1
 python-dateutil==2.8.2
