preprocessing system with authenticaiton

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,8 +2,8 @@
 PROJECT_NAME="Data Preprocessing Platform"
 API_VERSION="1.0.0"
 
-# CORS Settings - Add your frontend URLs
-ALLOWED_ORIGINS=["http://localhost:3000", "http://127.0.0.1:3000"]
+# CORS Settings - Must specify exact origins when using credentials
+ALLOWED_ORIGINS=["http://localhost:3000","http://127.0.0.1:3000"]
 
 # File Upload Settings
 MAX_UPLOAD_SIZE=104857600  # 100MB in bytes
@@ -15,3 +15,20 @@ OUTLIER_THRESHOLD=1.5  # IQR multiplier
 HIGH_CARDINALITY_THRESHOLD=50
 CORRELATION_THRESHOLD=0.9
 SKEWNESS_THRESHOLD=1.0
+
+# Database Configuration
+DATABASE_URL=postgresql://postgres:password@localhost:5432/dml_db
+
+# JWT Authentication
+SECRET_KEY=your-secret-key-change-this-in-production-use-openssl-rand-hex-32
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=15
+REFRESH_TOKEN_EXPIRE_DAYS=7
+
+# Email Configuration (for OTP verification)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=mdnuruzzamanemon@gmail.com
+SMTP_PASSWORD=xgfd lepn jgsh nahx
+SMTP_FROM=mdnuruzzamanemon@gmail.com
+SMTP_FROM_NAME=Data Preprocessing Platform
