--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,3 +12,17 @@ python-dateutil==2.8.2
 aiofiles==23.2.1
 pydantic==2.5.0
 pydantic-settings==2.1.0
+email-validator==2.1.0
+
+# Authentication & Database
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
+alembic==1.13.1
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+bcrypt==4.0.1
+
+# Email sending
+aiosmtplib==3.0.1
+
+
