full responsvie design done

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -28,7 +28,7 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 # Email Configuration (for OTP verification)
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER=mdnuruzzamanemon@gmail.com
-SMTP_PASSWORD=xgfd lepn jgsh nahx
-SMTP_FROM=mdnuruzzamanemon@gmail.com
+SMTP_USER=yourmail@gmail.com
+SMTP_PASSWORD=your password
+SMTP_FROM=yourmail@gmail.com
 SMTP_FROM_NAME=Data Preprocessing Platform
