--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,14 @@
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "recharts": "^2.10.3",
+    "recharts": "^2.15.4",
     "tailwind-merge": "^2.1.0"
   },
   "devDependencies": {
